<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/IconLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:contentDescription="TODO"
        android:src="@drawable/logo_sinf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/IconLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/noLogBtn"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/orange"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@color/red"
        app:cornerRadius="10dp"
        app:strokeColor="#E11414"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/noLogBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/gray"
        android:onClick="skipLogin"
        android:text="@string/continue_without_login"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

</RelativeLayout>