<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="477dp"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="-38dp"
            android:layout_marginEnd="0dp"
            app:srcCompat="@drawable/orange_rectangle" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="268dp"
            android:layout_height="339dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="71dp"
            android:layout_marginTop="-82dp"
            android:layout_marginEnd="72dp"
            app:srcCompat="@drawable/logo_sinf" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="315dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="171dp"
            android:layout_marginEnd="46dp"
            android:text="@string/new_acount"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Nombre-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nombreTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/nameEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_edittext"
                        android:drawableStart="@drawable/ic_person_o"
                        android:drawablePadding="10dp"
                        android:hint="@string/name"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Email-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nombreTil"
                    android:layout_marginTop="4dp"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_edittext"
                        android:drawableStart="@drawable/ic_email_o"
                        android:drawablePadding="10dp"
                        android:hint="Email"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emailTil"
                    android:layout_marginTop="4dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_edittext"
                        android:drawableStart="@drawable/ic_password_o"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Confirn Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/passwordTil"
                    android:layout_marginTop="4dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/confirmPasswordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_edittext"
                        android:drawableStart="@drawable/ic_password_o"
                        android:drawablePadding="10dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/confirmPasswordTil"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/register"
                    android:textColor="@color/red"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/red"
                    app:strokeWidth="1dp" />


            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>