<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="477dp"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="-38dp"
            android:layout_marginEnd="0dp"
            app:srcCompat="@drawable/orange_rectangle" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="268dp"
            android:layout_height="339dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="71dp"
            android:layout_marginTop="-82dp"
            android:layout_marginEnd="72dp"
            app:srcCompat="@drawable/logo_sinf" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="162dp"
            android:layout_marginTop="169dp"
            android:layout_marginEnd="163dp"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Email-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_edittext"
                        android:drawableStart="@drawable/ic_email_o"
                        android:drawablePadding="10dp"
                        android:hint="Email"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emailTil"
                    android:layout_marginTop="4dp"
                    app:passwordToggleEnabled="true"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_edittext"
                        android:drawableStart="@drawable/ic_password_o"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Forgot Password-->
                <TextView
                    android:id="@+id/forgotPs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/passwordTil"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="4dp"
                    android:padding="4dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgotPs"
                    android:layout_marginTop="18dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/login"
                    android:textColor="@color/red"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/red"
                    app:strokeWidth="1dp" />



            </RelativeLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:onClick="register"
            android:padding="10dp"
            android:text="@string/new_user_sing"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

    </RelativeLayout>

</RelativeLayout>